fixing the width/scrollbar issue with other systems

--- a/src/components/HomeAbout/HomeAbout.scss
+++ b/src/components/HomeAbout/HomeAbout.scss
@@ -58,12 +58,24 @@
 
   &__subdetails {
     height: fit-content;
-    box-sizing: border-box;
     display: flex;
     overflow-x: auto;
     overflow: scroll;
     scroll-behavior: smooth;
     scroll-snap-type: x mandatory;
+
+    &::-webkit-scrollbar {
+      width: 0.625rem;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: $CloudWhite;
+      border-radius: 0.625rem;
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: $CloudWhite;
+    }
 
     @include largemobile {
       height: fit-content;
@@ -85,14 +97,17 @@
       height: calc(100vh - 6rem - 6rem);
     }
   }
+
   &__card {
     height: calc(100vh - 5rem - 5rem);
     box-sizing: border-box;
-    overflow: scroll;
+    overflow: auto;
     scroll-snap-align: start;
     display: flex;
     flex-direction: column;
-    flex: 0 0 23.3125rem;
+    // flex: 0 0 23.3125rem;
+    flex: 1;
+    min-width: 23.3125rem;
     justify-content: flex-start;
     gap: 1.5rem;
     padding: 0 1.5rem;
@@ -104,7 +119,7 @@
     }
 
     @include tablet {
-      overflow: hidden;
+      // overflow: hidden;
       flex-direction: row;
       flex: 0 0 47.875rem;
       align-items: center;
@@ -112,7 +127,7 @@
     }
 
     @include largetablet {
-      overflow: hidden;
+      // overflow: hidden;
       flex-direction: row;
       flex: 0 0 63.875rem;
       align-items: center;
@@ -120,7 +135,7 @@
     }
 
     @include desktop {
-      overflow: hidden;
+      // overflow: hidden;
       flex-direction: row;
       flex: 0 0 79.875rem;
       align-items: center;
@@ -128,7 +143,7 @@
     }
 
     @include largedesktop {
-      overflow: hidden;
+      // overflow: hidden;
       flex-direction: row;
       flex: 0 0 94.875rem;
       align-items: center;
